# sec_poc

./: .env  .gitignore  .lintr  Dockerfile.ETL  Dockerfile.ETL.dockerignore  Dockerfile.dev  Dockerfile.dev.dockerignore  Dockerfile.prod  Dockerfile.prod.dockerignore  Makefile  README.md  api_etl_pg.sh  app.R  build-pg.sh  build-r-n-pg.sh  build-r-n-pg2.sh  build-tstdocker.sh  build-tstrocker.sh  check_if_any.R  config.yml  config.yml.sample  create_performance_expression.py  disease_tree_modal.R  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.stage.yml  eval_criteria.R  eval_prior_therapy.R  eval_prior_therapy_app.R  fix_blood_results.R  getDiseaseTreeData.R  get_api_studies_for_biomarkers.R  get_api_studies_for_cancer_centers.R  get_api_studies_for_disease.R  get_api_studies_for_disease_v2.R  get_api_studies_for_disease_v2.r  get_api_studies_for_location_and_distance.R  get_api_studies_for_postal_code.R  get_api_studies_with_rvd_gte.R  get_api_studies_with_va_sites.R  (+33 more)
demos/ctsapi_for_public_use/: api_proposal.py  app.py  common.py  compare_sites.py  ctg_overlay.py  ctg_study.json  ctsapi_field_sources.yaml  ctsapi_study.json  current_view.py  docs.md  field_exploration.py  field_mapping.xlsx  field_sources.csv  fields_suggested.csv  fields_used.csv  full_view.py  minimal_view.py  pyproject.toml  requirements.txt  test.rest  test.rest.py  unused_fields_cancergov.csv
demos/ctsapi_for_public_use/.streamlit/: config.toml
demos/ctsapi_for_public_use/data/: trial_types_phases.py  us_states.py
docker/R/files/: .Rprofile  .zshrc  CMakeLists.txt  init.sql  (+7 more)
(+130 files in other folders)
